@@ -53,9 +53,9 @@ copyright = u'2015, Brooke M. Fujita'
 # built documents.
 #
 # The short X.Y version.
-version = '0.2.0'
+version = '0.2.1'
 # The full version, including alpha/beta/rc tags.
-release = '0.2.0'
+release = '0.2.1'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
