@@ -6,8 +6,8 @@ from .dictionary import DictionaryInfo
 from .mecab import MeCab
 from .node import MeCabNode
 
-__version__ = '0.2.0'
-__version_info__ = (0, 2, 0)
+__version__ = '0.2.1'
+__version_info__ = (0, 2, 1)
 
 
 '''
