@@ -1,9 +1,12 @@
 CHANGELOG
 ---------
 
-- 2015/02/22 0.2.0 release.
+- 2015/02/22 0.2.1 release.
     - Enhancement for Issue 11: Debugging should use a kwarg. 
     - On-going improvements and clarifications to natto-py documentation.
+
+- 2015/02/22 0.2.0 release.
+    - Pulled.
 
 - 2015/01/02: 0.1.0 release.
     - Issue 9: Refactored Python 23 support logic. 
